# bridger

./: .gitignore  .ignore  CMakeLists.txt  README.md  justfile
data/: mesh.txt
glad/include/glad/: glad.h
glad/src/: glad.c
log/src/: log.c  log.h
shaders/: vertex.vert
solver/: .gitignore  CMakeLists.txt
solver/data/: elasticity.txt  mensh.txt  mesh.txt  mesh10.txt  mesh_hole.txt  mesh_whole.txt  solution.txt
solver/include/: integration.h  problem.h  shape.h  solver.h
solver/py/: add_domains.py  assemble.py  band.py  boundary.py  histo.py  integration.py  main.py  mesh_viz.py  parse.py  parser.py  plot.py  problem.py  shape.py  solver.py  test.py
solver/py/test/: assemble.py
solver/src/: assemble.c  band.c  boundary.c  example.c  fem.c  fem.h  homework.c  integration.c  io.c  lib.c  main.c  problem.c  shape.c  solver.c
src/: gl_init.c  gl_init.h  main.c  read_mesh.c  read_mesh.h
src/gui/: gui.c  gui.h  image.c  load_mesh.c  shaders.c
src/gui/shaders/: fragment.frag  fragment_text.frag  vertex.vert
src/mesh/: create_field.c  generate_mesh.c  mesh.h  normalize_mesh.c  read_mesh.c  read_mesh.h  write_mesh.c
